--- a/escalas_diagrama.html
+++ b/escalas_diagrama.html
@@ -174,28 +174,28 @@
     </div>
 
     <!-- Acordes de Séptima Mayor -->
-    <div class="chord-section">
-        <h2>Pentatonica Mayor</h2>
-        <div class="chord-row">
-            <div class="chord-box major-seventh">
+    <!-- <div class="chord-section"> -->
+        <!-- <h2>Pentatonica Mayor</h2> -->
+        <!-- <div class="chord-row"> -->
+            <!-- <div class="chord-box major-seventh"> -->
                 <!-- <img src="ruta/a/imagen-todos-major-seventh.jpg" alt="Acordes de séptima mayor"> -->
-                <img src="escalas/penta_mayor.png" alt="Pentatonica Mayor">
-                <div class="chord-name">Pentatonica Mayor</div>
-            </div>
-        </div>
-    </div>
+                <!-- <img src="escalas/penta_mayor.png" alt="Pentatonica Mayor"> -->
+                <!-- <div class="chord-name">Pentatonica Mayor</div> -->
+            <!-- </div> -->
+        <!-- </div> -->
+    <!-- </div> -->
 
       <!-- Acordes de Séptima -->
-    <div class="chord-section">
-        <h2>Pentatonica Menor</h2>
-        <div class="chord-row">
-            <div class="chord-box seventh">
+    <!-- <div class="chord-section"> -->
+        <!-- <h2>Pentatonica Menor</h2> -->
+        <!-- <div class="chord-row"> -->
+            <!-- <div class="chord-box seventh"> -->
                 <!-- <img src="ruta/a/imagen-todos-septima.jpg" alt="Acordes de séptima"> -->
-                 <img src="escalas/penta_menor.png" alt="Pentatonica Menor">
-                <div class="chord-name">Pentatonica Menor</div>
-            </div>
-        </div>
-    </div>
+                 <!-- <img src="escalas/penta_menor.png" alt="Pentatonica Menor"> -->
+                <!-- <div class="chord-name">Pentatonica Menor</div> -->
+            <!-- </div> -->
+        <!-- </div> -->
+    <!-- </div> -->
 
 
     <div class="chord-section">
