--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
                 <a href="escalas_interactivo.html">Estructura Acordes y escalas(juega)</a>
                 <a href="guitarra_didactica.html">Guitarra Interactiva</a>
                 <a href="piano_real_didactico.html">Piano Interactivo</a>
+                <a href="progresiones_ejemplos.html">Progresiones Ejemplos</a>
                  <a href="https://pasturryx.github.io/website_guitarra/circulo_quintas/src/dist/index.html">Círculo de Quintas</a>
                   <!-- <a href="intervalos_tonos.html">Notacion musical, Tonos e intervalos</a> -->
  <!-- <a href="acordes.html">Diagrama de acordes</a> -->
