--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <a href="escalas_interactivo.html">Estructura Acordes y escalas(juega)</a>
                 <a href="guitarra_didactica.html">Guitarra Interactiva</a>
                 <a href="piano_real_didactico.html">Piano Interactivo</a>
-                <a href="progresiones_ejemplos.html">Progresiones Ejemplos</a>
+                <a href="progresiones_ejemplo.html">Progresiones Ejemplos</a>
                  <a href="https://pasturryx.github.io/website_guitarra/circulo_quintas/src/dist/index.html">Círculo de Quintas</a>
                   <!-- <a href="intervalos_tonos.html">Notacion musical, Tonos e intervalos</a> -->
  <!-- <a href="acordes.html">Diagrama de acordes</a> -->
@@ -252,7 +252,7 @@
                  <!-- <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas3/index.html">Círculo de Quintas3</a></li>  -->
                  <!-- Nuevo enlace -->
                  <!-- <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas4\dist/index.html">Círculo de Quintas4</a></li> -->
-                 <!-- Nuevo enlace --> -->
+                 <!-- Nuevo enlace --> 
             </div>
 
             <div class="sound-controls">
