added content  excercises
mano izquierda y derecha

--- a/index.html
+++ b/index.html
@@ -233,8 +233,11 @@
                 <a href="escalas_interactivo.html">Estructura Acordes y escalas(juega)</a>
                 <a href="guitarra_didactica.html">Guitarra Interactiva</a>
                 <a href="piano_real_didactico.html">Piano Interactivo</a>
-                <a href="progresiones_ejemplo.html">Progresiones Ejemplos</a>
                  <a href="https://pasturryx.github.io/website_guitarra/circulo_quintas/src/dist/index.html">Círculo de Quintas</a>
+
+                 <a href="progresiones_ejemplo.html">Progresiones Ejemplos</a>
+                 <a href="ejercicios_guitarra_mano_iz_mano_dere.html">Ejercicios mano izuierda & derechaa</a>
+
                   <!-- <a href="intervalos_tonos.html">Notacion musical, Tonos e intervalos</a> -->
  <!-- <a href="acordes.html">Diagrama de acordes</a> -->
                 <!-- <a href="C:/Users/felip/Documents/GitHub/website_guitarra/circulo_quintas/src/dist/index.html">Círculo de Quintas</a></li> -->
