--- a/ejercicios_guitarra_mano_iz_mano_dere.html
+++ b/ejercicios_guitarra_mano_iz_mano_dere.html
@@ -63,78 +63,101 @@
             border-bottom: 2px solid #007BFF;
             padding-bottom: 10px;
         }
+        /* Estilos para el botón "Volver al inicio" */
+        .back-to-top {
+            position: fixed; /* Fija el botón en la pantalla */
+            top: 20px; /* Distancia desde la parte superior */
+            left: 20px; /* Distancia desde la izquierda */
+            background-color: #28a745; /* Color verde */
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            text-decoration: none; /* Quita el subrayado del enlace */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Sombra para resaltar */
+            z-index: 1000; /* Asegura que esté por encima de otros elementos */
+        }
+        .back-to-top:hover {
+            background-color: #218838; /* Color verde más oscuro al pasar el mouse */
+        }
+        
     </style>
 </head>
 <body>
 
-<header>
-    <h1>Ejercicios de Guitarra</h1>
-    <p>Mejora tu técnica con ejercicios específicos para la mano derecha e izquierda.</p>
-</header>
+    <!-- Botón "Volver al inicio" -->
+    <a href="index.html" class="back-to-top">Volver al inicio</a>
 
-<div class="container">
-    <!-- Sección: Ejercicios para la mano derecha -->
-    <div class="section-title">Ejercicios para la Mano Derecha</div>
+    <header>
+        <h1>Ejercicios de Guitarra</h1>
+        <p>Mejora tu técnica con ejercicios específicos para la mano derecha e izquierda.</p>
+    </header>
 
-    <!-- Técnicas básicas para la mano derecha -->
-    <div class="video-box">
-        <h3>Técnicas básicas para la mano derecha</h3>
-        <iframe src="https://www.youtube.com/embed/_vhs4EOhCHE" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>Enlace: <a href="https://www.youtube.com/watch?v=_vhs4EOhCHE" target="_blank">Ver en YouTube</a></p>
+    <div class="container">
+        <!-- Sección: Ejercicios para la mano derecha -->
+        <div class="section-title">Ejercicios para la Mano Derecha</div>
+
+        <!-- Técnicas básicas para la mano derecha -->
+        <div class="video-box">
+            <h3>Técnicas básicas para la mano derecha</h3>
+            <iframe src="https://www.youtube.com/embed/_vhs4EOhCHE" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>Enlace: <a href="https://www.youtube.com/watch?v=_vhs4EOhCHE" target="_blank">Ver en YouTube</a></p>
+        </div>
+
+        <!-- Ejercicios básicos de movimiento de púa -->
+        <div class="video-box">
+            <h3>Ejercicios básicos de movimiento de púa</h3>
+            <iframe src="https://www.youtube.com/embed/W7CBHKLAO9o" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>Enlace: <a href="https://www.youtube.com/watch?v=W7CBHKLAO9o" target="_blank">Ver en YouTube</a></p>
+        </div>
+
+        <!-- Velocidad y precisión con púa y mano derecha -->
+        <div class="video-box">
+            <h3>Velocidad y precisión con púa y mano derecha</h3>
+            <iframe src="https://www.youtube.com/embed/kel_z8HFzJo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>Enlace: <a href="https://www.youtube.com/watch?v=kel_z8HFzJo" target="_blank">Ver en YouTube</a></p>
+        </div>
+
+        <!-- Técnicas básicas para la mano derecha -->
+        <div class="video-box">
+            <h3>Técnicas básicas para la mano derecha</h3>
+            <iframe src="https://www.youtube.com/embed/yJ1Q_FK6pwY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>Enlace: <a href="https://www.youtube.com/watch?v=yJ1Q_FK6pwY" target="_blank">Ver en YouTube</a></p>
+        </div>
+
+        <!-- Sección: Ejercicios para la mano izquierda -->
+        <div class="section-title">Ejercicios para la Mano Izquierda</div>
+
+        <!-- Ejercicios para la mano izquierda -->
+        <div class="video-box">
+            <h3>Ejercicios para la mano izquierda</h3>
+            <iframe src="https://www.youtube.com/embed/T9VqaqrVPLo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>Enlace: <a href="https://www.youtube.com/watch?v=T9VqaqrVPLo" target="_blank">Ver en YouTube</a></p>
+        </div>
+
+        <!-- Mejorar la mano izquierda (1) -->
+        <div class="video-box">
+            <h3>Mejorar la mano izquierda (1)</h3>
+            <iframe src="https://www.youtube.com/embed/ygtfwL26i9o" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>Enlace: <a href="https://www.youtube.com/watch?v=ygtfwL26i9o" target="_blank">Ver en YouTube</a></p>
+        </div>
+
+        <!-- Mejorar la mano izquierda (2) -->
+        <div class="video-box">
+            <h3>Mejorar la mano izquierda (2)</h3>
+            <iframe src="https://www.youtube.com/embed/fuSNsCgIWAg" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>Enlace: <a href="https://www.youtube.com/watch?v=fuSNsCgIWAg" target="_blank">Ver en YouTube</a></p>
+        </div>
+
+        <!-- Mejorar la mano izquierda (3) -->
+        <div class="video-box">
+            <h3>Mejorar la mano izquierda (3)</h3>
+            <iframe src="https://www.youtube.com/embed/gM1LbL4I5Hs" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>Enlace: <a href="https://www.youtube.com/watch?v=gM1LbL4I5Hs" target="_blank">Ver en YouTube</a></p>
+        </div>
     </div>
-
-    <!-- Ejercicios básicos de movimiento de púa -->
-    <div class="video-box">
-        <h3>Ejercicios básicos de movimiento de púa</h3>
-        <iframe src="https://www.youtube.com/embed/W7CBHKLAO9o" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>Enlace: <a href="https://www.youtube.com/watch?v=W7CBHKLAO9o" target="_blank">Ver en YouTube</a></p>
-    </div>
-
-    <!-- Velocidad y precisión con púa y mano derecha -->
-    <div class="video-box">
-        <h3>Velocidad y precisión con púa y mano derecha</h3>
-        <iframe src="https://www.youtube.com/embed/kel_z8HFzJo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>Enlace: <a href="https://www.youtube.com/watch?v=kel_z8HFzJo" target="_blank">Ver en YouTube</a></p>
-    </div>
-
-    <!-- Técnicas básicas para la mano derecha -->
-    <div class="video-box">
-        <h3>Técnicas básicas para la mano derecha</h3>
-        <iframe src="https://www.youtube.com/embed/yJ1Q_FK6pwY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>Enlace: <a href="https://www.youtube.com/watch?v=yJ1Q_FK6pwY" target="_blank">Ver en YouTube</a></p>
-    </div>
-
-    <!-- Sección: Ejercicios para la mano izquierda -->
-    <div class="section-title">Ejercicios para la Mano Izquierda</div>
-
-    <!-- Ejercicios para la mano izquierda -->
-    <div class="video-box">
-        <h3>Ejercicios para la mano izquierda</h3>
-        <iframe src="https://www.youtube.com/embed/T9VqaqrVPLo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>Enlace: <a href="https://www.youtube.com/watch?v=T9VqaqrVPLo" target="_blank">Ver en YouTube</a></p>
-    </div>
-
-    <!-- Mejorar la mano izquierda (1) -->
-    <div class="video-box">
-        <h3>Mejorar la mano izquierda (1)</h3>
-        <iframe src="https://www.youtube.com/embed/ygtfwL26i9o" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>Enlace: <a href="https://www.youtube.com/watch?v=ygtfwL26i9o" target="_blank">Ver en YouTube</a></p>
-    </div>
-
-    <!-- Mejorar la mano izquierda (2) -->
-    <div class="video-box">
-        <h3>Mejorar la mano izquierda (2)</h3>
-        <iframe src="https://www.youtube.com/embed/fuSNsCgIWAg" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>Enlace: <a href="https://www.youtube.com/watch?v=fuSNsCgIWAg" target="_blank">Ver en YouTube</a></p>
-    </div>
-
-    <!-- Mejorar la mano izquierda (3) -->
-    <div class="video-box">
-        <h3>Mejorar la mano izquierda (3)</h3>
-        <iframe src="https://www.youtube.com/embed/gM1LbL4I5Hs" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>Enlace: <a href="https://www.youtube.com/watch?v=gM1LbL4I5Hs" target="_blank">Ver en YouTube</a></p>
-    </div>
-</div>
 
 </body>
 </html>
