--- a/escalas_interactivo.html
+++ b/escalas_interactivo.html
@@ -5,6 +5,26 @@
     <meta charset="UTF-8">
     <title>Práctica de Escalas Musicales</title>
     <style>
+             /* Estilos para el botón "Volver al inicio" */
+        .back-to-top {
+            position: fixed; /* Fija el botón en la pantalla */
+            top: 20px; /* Distancia desde la parte superior */
+            left: 20px; /* Distancia desde la izquierda */
+            background-color: #28a745; /* Color verde */
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            text-decoration: none; /* Quita el subrayado del enlace */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Sombra para resaltar */
+            z-index: 1000; /* Asegura que esté por encima de otros elementos */
+        }
+        .back-to-top:hover {
+            background-color: #218838; /* Color verde más oscuro al pasar el mouse */
+        }
+        
         body {
             font-family: Arial, sans-serif;
             max-width: 800px;
@@ -154,6 +174,8 @@
             min-height: 20px;
         }
     </style>
+    <!-- Botón "Volver al inicio" -->
+    <a href="index.html" class="back-to-top">Volver al inicio</a>
 </head>
 <body>
     <div class="container">
