--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
             <div class="menu-links">
                 <a href="register.html">Registro</a>    
                 <a href="construccion_acordes.html">Teoria de acordes</a>
+                <a href="acordes2.html">Teoria de todos los acordes</a>
                 <a href="estructura_acordes.html">Estructura de acordes</a>
                 <a href="acordes_diagrama.html">Diagrama de acordes</a>
                 <a href="escalas_diagrama.html">Diagrama Escalas y modos</a>
