--- a/acordes2.html
+++ b/acordes2.html
@@ -167,7 +167,7 @@
 
     <header>
         <h1>Acordes de Guitarra: explicación de todos los tipos con PDF gratis</h1>
-        <p>Sergio J. C.</p>
+        <p>Gracias a Sergio J. C. y su pagina</p>
         <p>9 de marzo de 2023</p>
     </header>
 
@@ -815,11 +815,11 @@
 </div>
     </main>
 
-    <footer>
-        <div class="content-box">
-            <p>© 2023 - Todos los derechos reservados</p>
-            <p>Si te ha gustado este artículo, no dudes en compartirlo en tus redes sociales.</p>
-        </div>
-    </footer>
+    <!-- <footer> -->
+        <!-- <div class="content-box"> -->
+            <!-- <p>© 2023 - Todos los derechos reservados</p> -->
+            <!-- <p>Si te ha gustado este artículo, no dudes en compartirlo en tus redes sociales.</p> -->
+        <!-- </div> -->
+    <!-- </footer> -->
 </body>
 </html>
