--- a/acordes2.html
+++ b/acordes2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acordes de Guitarra: explicación de todos los tipos con PDF gratis</title>
+    <title>Acordes de Guitarra: explicación de todos los tipos </title>
     <link rel="icon" href="ico/music5.ico" type="image/x-icon">
     <style>
         /* Estilos generales */
@@ -271,7 +271,7 @@
             <h3>¿Cansado de perder el tiempo en Youtube?</h3>
             <p>¿Te encantaría aprender a tocar la guitarra pero estás atascado y frustrado? Échale un ojo a mi curso de guitarra para principiantes y aprende con un buen método desde el primer minuto.</p>
             <p><strong>¡Apto para eléctrica, española o acústica!</strong></p>
-            <a href="#" class="pdf-button">Quiero aprender a tocar guitarra</a>
+            <a href="acordes2/acordes-guitarra-pdf.pdf" class="pdf-button">Quiero aprender a tocar guitarra</a>
         </div>
 
         <h2>Acordes Mayores y Menores</h2>
